--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,4 +1,5 @@
 @use "home-page";
+@use "./navbar";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 .title {
