home page new sections added

--- a/styles/scss/_home-page.scss
+++ b/styles/scss/_home-page.scss
@@ -44,3 +44,15 @@
     z-index: 9;
   }
 }
+
+.home-about-agg-section {
+  img {
+    max-height: 500px;
+    object-fit: cover;
+    object-position: top center;
+    border-radius: 16px;
+    box-shadow:
+      rgba(0, 0, 0, 0.25) 0px 14px 28px,
+      rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  }
+}
