--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,6 +1,7 @@
 @use "./variable.scss";
 @use "home-page";
 @use "./navbar";
+@use "./footer";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 .title {
