--- a/styles/scss/_page-header.scss
+++ b/styles/scss/_page-header.scss
@@ -42,3 +42,14 @@
     z-index: 1;
   }
 }
+
+.page-banner {
+  margin: 64px 0;
+  box-shadow:
+    rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  img {
+    height: 500px;
+    object-fit: cover;
+  }
+}
