--- a/styles/scss/_page-header.scss
+++ b/styles/scss/_page-header.scss
@@ -49,7 +49,7 @@
     rgba(0, 0, 0, 0.25) 0px 14px 28px,
     rgba(0, 0, 0, 0.22) 0px 10px 10px;
   img {
-    height: 500px;
+    height: auto;
     object-fit: cover;
   }
 }
