--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -3,6 +3,7 @@
 @use "./navbar";
 @use "./page-header";
 @use "./footer";
+@use "./team-card";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 .title {
