--- a/styles/scss/_team-card.scss
+++ b/styles/scss/_team-card.scss
@@ -2,7 +2,7 @@
   border-radius: 8px;
   overflow: hidden;
   border: 1px solid #d1d1d1;
-  width: 400px;
+  width: 100%;
   img {
     width: 100%;
     height: 450px;
