--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -4,6 +4,7 @@
 @use "./page-header";
 @use "./footer";
 @use "./team-card";
+@use "./animation";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 .title {
