--- a/styles/scss/_home-page.scss
+++ b/styles/scss/_home-page.scss
@@ -35,11 +35,12 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
   }
   .hero-content {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     z-index: 9;
   }
