hero title updated and background color

--- a/styles/scss/_home-page.scss
+++ b/styles/scss/_home-page.scss
@@ -9,16 +9,16 @@
   width: 100%;
   background-size: cover;
   background-position: center center;
-  // &::before {
-  //   content: "";
-  //   background-color: #00000071;
-  //   height: 100%;
-  //   width: 100%;
-  //   z-index: 1;
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  // }
+  &::before {
+    content: "";
+    background-color: #00000034;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
   &::after {
     content: "";
     background-image: url("/images/hero-banner.svg");
