--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -10,14 +10,13 @@
 .title {
   font-family: "Roboto Slab", serif;
   font-optical-sizing: auto;
-  font-size: 64px;
+  font-size: 50px;
   font-weight: 900;
-  background-color: rgba(0, 0, 0, 0.719);
   width: fit-content;
   padding: 4px 24px;
   border-radius: 16px;
   @media (max-width: 576px) {
-    font-size: 38px;
+    font-size: 25px;
     text-align: center;
   }
 }
@@ -27,7 +26,7 @@
   font-size: 40px;
   font-weight: 700;
   color: variable.$primary;
-  text-align: left;
+  text-align: center;
   @media (max-width: 576px) {
     text-align: center;
     font-size: 32px;
