--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -16,8 +16,10 @@
   padding: 4px 24px;
   border-radius: 16px;
   @media (max-width: 576px) {
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
