--- a/styles/scss/_animation.scss
+++ b/styles/scss/_animation.scss
@@ -1,7 +1,7 @@
 @keyframes appear {
   from {
     opacity: 0;
-    transform: scale(0.5); /* use 'transform' instead of 'scale' directly */
+    transform: scale(0.8);
   }
   to {
     opacity: 1;
@@ -14,34 +14,12 @@
   view-timeline-axis: block;
 
   animation-name: appear;
-  animation-duration: 1s; /* Add a duration */
-  animation-timing-function: ease-out;
+  animation-duration: 1s;
+  animation-delay: 0.2s;
+  animation-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
   animation-fill-mode: both;
   animation-timeline: --appear;
-  animation-range: entry 0% cover 40%;
-}
-
-@keyframes appear {
-  from {
-    opacity: 0;
-    transform: scale(0.5); /* use 'transform' instead of 'scale' directly */
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-.animation-block {
-  view-timeline-name: --appear;
-  view-timeline-axis: block;
-
-  animation-name: appear;
-  animation-duration: 1s; /* Add a duration */
-  animation-timing-function: ease-out;
-  animation-fill-mode: both;
-  animation-timeline: --appear;
-  animation-range: entry 0% cover 40%;
+  animation-range: entry 10% cover 60%;
 }
 
 @keyframes fadeInDown {
