--- a/styles/scss/_animation.scss
+++ b/styles/scss/_animation.scss
@@ -44,3 +44,31 @@
 .hero-title-animation.animate {
   animation: fadeInDown 0.8s ease-out forwards;
 }
+
+@keyframes modalFadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.modal-open-animation.animate {
+  animation: modalFadeInUp 0.8s ease-out forwards;
+}
+
+@keyframes backdropFadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.modal-backdrop {
+  animation: backdropFadeIn 0.4s ease forwards;
+}
