--- a/styles/scss/_animation.scss
+++ b/styles/scss/_animation.scss
@@ -1,3 +1,27 @@
+// @keyframes appear {
+//   from {
+//     opacity: 0;
+//     transform: scale(0.8);
+//   }
+//   to {
+//     opacity: 1;
+//     transform: scale(1);
+//   }
+// }
+
+// .animation-block {
+//   view-timeline-name: --appear;
+//   view-timeline-axis: block;
+
+//   animation-name: appear;
+//   animation-duration: 1s;
+//   animation-delay: 0.2s;
+//   animation-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
+//   animation-fill-mode: both;
+//   animation-timeline: --appear;
+//   animation-range: entry 10% cover 60%;
+// }
+
 @keyframes appear {
   from {
     opacity: 0;
@@ -9,17 +33,27 @@
   }
 }
 
-.animation-block {
-  view-timeline-name: --appear;
-  view-timeline-axis: block;
+/* Apply animation only on medium screens and larger (e.g. 768px and up) */
+@media (min-width: 768px) {
+  .animation-block {
+    view-timeline-name: --appear;
+    view-timeline-axis: block;
 
-  animation-name: appear;
-  animation-duration: 1s;
-  animation-delay: 0.2s;
-  animation-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
-  animation-fill-mode: both;
-  animation-timeline: --appear;
-  animation-range: entry 10% cover 60%;
+    animation-name: appear;
+    animation-duration: 1s;
+    animation-delay: 0.2s;
+    animation-timing-function: cubic-bezier(0.25, 1, 0.5, 1);
+    animation-fill-mode: both;
+    animation-timeline: --appear;
+    animation-range: entry 10% cover 60%;
+  }
+}
+
+/* On smaller screens, disable animation */
+@media (max-width: 767.98px) {
+  .animation-block {
+    animation: none !important;
+  }
 }
 
 @keyframes fadeInDown {
