--- a/styles/scss/_page-header.scss
+++ b/styles/scss/_page-header.scss
@@ -2,9 +2,12 @@
 
 .page-header {
   position: relative;
-  height: 550px;
+  height: calc(100vh - 200px);
   display: flex;
   align-items: center;
+  @media (max-width: 576px) {
+    height: 380px;
+  }
   &::before {
     content: "";
     background-color: #00000041;
