--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -5,6 +5,7 @@
 @use "./footer";
 @use "./team-card";
 @use "./animation";
+@use "./whatsapp-widget";
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
 .title {
