--- a/styles/scss/_whatsapp-widget.scss
+++ b/styles/scss/_whatsapp-widget.scss
@@ -1,11 +1,11 @@
 .floating-whatsapp .floating-whatsapp-button {
-  left: 10px !important;
+  right: 10px !important;
   @media (max-width: 576px) {
     bottom: 2rem;
   }
 }
 .floating-whatsapp .styles-module_whatsappChatBox__MdQ5U {
-  left: 10px !important;
+  right: 10px !important;
   @media (max-width: 576px) {
     bottom: 6rem;
   }
